# Tournois-Petanque-App

./: .easignore  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  App.js  App.tsx  CHANGELOG.md  MIGRATION_DOCUMENTATION.md  README.md  app.config.js  app.config.ts  app.json  babel.config.cts  babel.config.js  babel.config.ts  crowdin.yml  drizzle.config.ts  eas.json  eslint.config.js  gluestack-ui.config.ts  i18n.js  jsconfig.json  metro.config.js  package-lock.json  package.json  react-native-css-env.d.ts  tailwind.config.js  test-migration-data.ts  tmp-output-console.txt  tsconfig.json  tsconfig.plugins.json
.expo/: packager-info.json
.expo-shared/: assets.json
.github/workflows/: codeql-analysis.yml  eslint.yml  tauri-action.yml
components/: Accueil.js  BoutonMenuHeaderNavigation.js  Changelog.js  ChoixModeTournoi.js  ChoixTournois.js  ChoixTypeTournoi.js  GenerationChampionnat.js  GenerationCoupe.js  GenerationMatchs-old.js  GenerationMatchs.js  GenerationMatchsAvecEquipes.js  GenerationMatchsTriplettes.js  Inscriptions.js  InscriptionsSansNoms.js  JoueurSuggere.js  JoueursTournoi.js  ListeJoueur.js  ListeMatchs.js  ListeResultatItem.js  ListeResultats.js  ListeTournois.js  ListesJoueurs.js  MatchDetail.js  MatchItem.js  OptionsTournoi.js  PDFExport.js  ParametresTournoi.js
config/: gluestack-ui.config.ts
config/theme/: Button.ts  CheckboxIndicator.ts  CheckboxLabel.ts  Input.ts  InputField.ts  RadioIcon.ts  RadioIndicator.ts  RadioLabel.ts  SelectInput.ts  SelectTrigger.ts
drizzle/: 0000_violet_terrax.sql  0001_true_blink.sql  0002_loving_magneto.sql  0003_slow_red_shift.sql  0004_loose_ken_ellis.sql  0005_giant_justice.sql  0006_wild_the_spike.sql  0007_medical_silver_sable.sql  0008_fair_dormammu.sql  0009_ambitious_kinsey_walden.sql  0010_windy_mole_man.sql  0011_goofy_dexter_bennett.sql  0012_easy_payback.sql  migrations.js
drizzle/20260420212648_tiny_molten_man/: migration.sql  snapshot.json
drizzle/20260530000000_fix_null_joueur_names/: migration.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  _journal.json
navigation/: Navigation.js
plugins-build/: withDisableForcedDarkModeAndroid.js
plugins/builds/: withDisableForcedDarkModeAndroid.js
public/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/animations/: FadeIn.js  FadeIn.tsx
src/app/: _layout.tsx  accueil.tsx  index.tsx
src/assets/: ChangelogData.json  ChangelogData_da.json  ChangelogData_de.json  ChangelogData_en.json  ChangelogData_es.json  (+6 more)
store/: configureStore.js
(+485 files in other folders)
