[package]
name = "app"
version = "1.15.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = ["api-all"] }
# TODO: below is here for feature unification (ubuntu22.04 does not have openssl1.1 and it is creating problems for us, attohttpc is the dependency)
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
