[package]
name = "app"
version = "2.1.0"
description = "Créer un tournoi de pétanque et ajouter les scores n'a jamais été aussi simple !"
authors = ["Mathis Cadio"]
license = ""
repository = "https://github.com/mathis-kdio/Tournois-Petanque-App/"
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
tauri-plugin-updater = "2.7.1"
# TODO: below is here for feature unification (ubuntu22.04 does not have openssl1.1 and it is creating problems for us)
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
